# at16k

./: .gitignore  CODE_OF_CONDUCT.md  Dockerfile  LICENSE.md  README.md  example.py  live_example.py  live_example_mic.py  pyproject.toml
at16k/: __init__.py  download.py
at16k/api/: __init__.py  live_speech_to_text.py  speech_to_text.py
at16k/blocks/: transcriber.py
at16k/core/: live_inference.py  live_model.py  media.py  microphone.py  model.py  segment.py
at16k/utils/: text_encoder.py  tokenizer.py
tests/: test_at16k.py
