[tool.poetry]
name = "at16k"
version = "0.1.2"
description = "at16k is a Python library to perform automatic speech recognition or speech to text conversion."
authors = ["Mohit Shah <mohit@at16k.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/at16k/at16k.git"
keywords = ["asr, automatic speech recognition, speech-to-text, speech recognition, speech analysis"]

[tool.poetry.dependencies]
python = "^3.6"
tensorflow = "1.14"
scipy = "^1.3.3"
progressbar = "^2.5"
flask = "^1.1.1"
flask-cors = "^3.0.8"
gevent = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.4.4"
autopep8 = "^1.4.4"

[tool.poetry.scripts]
at16k-convert = 'at16k.bin.speech_to_text:main'
at16k-serve = 'at16k.bin.serve:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
